// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination-items-per-page #render should render as expected (1) 1`] = `
<gux-pagination-items-per-page-beta items-per-page="25">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 25 items per page selected">
        <mock:shadow-root>
          <gux-popup-beta>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate-beta>
                      25
                    </gux-truncate-beta>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <div class="gux-listbox-container" slot="popup">
              <slot></slot>
            </div>
          </gux-popup-beta>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              25
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              50
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              75
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              100
            </gux-truncate-beta>
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page-beta>
`;

exports[`gux-pagination-items-per-page #render should render as expected (2) 1`] = `
<gux-pagination-items-per-page-beta items-per-page="50">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 50 items per page selected">
        <mock:shadow-root>
          <gux-popup-beta>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate-beta>
                      50
                    </gux-truncate-beta>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <div class="gux-listbox-container" slot="popup">
              <slot></slot>
            </div>
          </gux-popup-beta>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              25
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              50
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              75
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              100
            </gux-truncate-beta>
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page-beta>
`;

exports[`gux-pagination-items-per-page #render should render as expected (3) 1`] = `
<gux-pagination-items-per-page-beta items-per-page="75">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 75 items per page selected">
        <mock:shadow-root>
          <gux-popup-beta>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate-beta>
                      75
                    </gux-truncate-beta>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <div class="gux-listbox-container" slot="popup">
              <slot></slot>
            </div>
          </gux-popup-beta>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              25
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              50
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              75
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              100
            </gux-truncate-beta>
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page-beta>
`;

exports[`gux-pagination-items-per-page #render should render as expected (4) 1`] = `
<gux-pagination-items-per-page-beta items-per-page="100">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 100 items per page selected">
        <mock:shadow-root>
          <gux-popup-beta>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate-beta>
                      100
                    </gux-truncate-beta>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <div class="gux-listbox-container" slot="popup">
              <slot></slot>
            </div>
          </gux-popup-beta>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              25
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              50
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              75
            </gux-truncate-beta>
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-i" role="option">
            <!---->
            <gux-truncate-beta>
              100
            </gux-truncate-beta>
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page-beta>
`;
